--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "sakai-ts",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.11.4",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1",
-    "typescript": "4.8.4"
-  }
+    "name": "sakai-react-typescript",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@fullcalendar/core": "^5.7.2",
+        "@fullcalendar/daygrid": "^5.7.2",
+        "@fullcalendar/interaction": "^5.7.2",
+        "@fullcalendar/timegrid": "^5.7.2",
+        "@fullcalendar/react": "^5.7.0",
+        "@types/react-transition-group": "^4.4.1",
+        "next": "12.3.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "chart.js": "3.9.1",
+        "sass": "^1.54.8",
+        "primeflex": "^3.2.1",
+        "primeicons": "^6.0.1",
+        "primereact": "^8.6.1",
+        "react-transition-group": "^4.4.1"
+    },
+    "devDependencies": {
+        "@types/node": "18.11.4",
+        "@types/react": "18.0.21",
+        "@types/react-dom": "18.0.6",
+        "eslint": "8.26.0",
+        "eslint-config-next": "12.3.1",
+        "typescript": "4.8.4"
+    }
 }
